<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/BackgroundColor">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/logo" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:layout_margin="16dp"
        android:background="@drawable/background_home_tools"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/font"
            android:text="@string/home_add_watermark"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!-- Layout Edit -->


            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="@dimen/home_icon_layout"
                    android:layout_height="@dimen/home_icon_layout"
                    android:background="@drawable/background_circle_edit_white">

                    <LinearLayout
                        android:id="@+id/layout_edit_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/ic_baseline_photo"
                            app:tint="@color/BackgroundCardColor" />
                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font"
                    android:text="@string/edit"
                    android:textColor="@color/white"/>

            </LinearLayout>


            <!-- Layout Collage -->


            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="@dimen/home_icon_layout"
                    android:layout_height="@dimen/home_icon_layout"
                    android:background="@drawable/background_circle_edit_white">

                    <LinearLayout
                        android:id="@+id/layout_edit_collage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/home_icon_size"
                            android:layout_height="@dimen/home_icon_size"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/ic_round_collage"
                            app:tint="@color/BackgroundCardColor" />
                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font"
                    android:text="@string/collage"
                    android:textColor="@color/white"/>

            </LinearLayout>


            <!-- Layout Camera -->

            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="@dimen/home_icon_layout"
                    android:layout_height="@dimen/home_icon_layout"
                    android:background="@drawable/background_circle_edit_white">

                    <LinearLayout
                        android:id="@+id/layout_edit_camera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/home_icon_size"
                            android:layout_height="@dimen/home_icon_size"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/ic_baseline_camera"
                            app:tint="@color/BackgroundCardColor" />
                    </LinearLayout>


                </com.balysv.materialripple.MaterialRippleLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font"
                    android:text="@string/camera"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>